--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
           💌
           <a href="mailto:abdi.abdirashid@hotmail.com">abdi.abdirashid@hotmail.com</a>
         </p>
-        <p>📍 8906 Bonstetten., Stallikerstrasse 5A,</p>
+       <p>📍 Stallikerstrasse 5A, 8906 Bonstetten</p>
       </div>
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/abdi-abdirashid-09aa81294?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BH4V9iTssSPi0F7SisuN3yw%3D%3D" target="_blank">
