--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
       .contact a, p {
         line-height: 1.0;
       }
+      .date {
+        padding-left: 78%;
+        line-height: 1.6;
+        margin-top: 25px;
+      }
     </style>
   </head>
   <body>
@@ -161,6 +166,7 @@
       </p>
       <p>📍 Stallikerstrasse 5A, 8906 Bonstetten</p>
       </div>
+     <div class="date" id="current-date"></div>
 
     <h2 class="zusammenfassung">Summery</h2>
     <p class="zusammenfassung"> Experienced professional in operational maintenance, assembly, and production with strong craftsmanship skills.<br /> Passionate about drone flying and video editing, with continuous development of my creative and technical abilities.
