--- a/index.html
+++ b/index.html
@@ -234,6 +234,16 @@
         <th><a href="Ausweis & Führerausweis_compressed-2-imageonline.co-merged-min.png" target="_blank">Documents/ID</th>
       </tr>
     </table>
+
+     <script>
+      // Get current date in the format: Month Day, Year (e.g., January 25, 2025)
+      const currentDate = new Date();
+      const options = { year: 'numeric', month: 'long', day: 'numeric' };
+      const dateString = currentDate.toLocaleDateString('de-DE', options);  // Adjusting for German locale
+
+      // Display the date inside the "current-date" div
+      document.getElementById('current-date').innerText = dateString;
+    </script>
     
     <footer>
       <p>© Abdi Abdirashid. All rights reserved</p>
