--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
         padding-left: 20px; /* Added padding for better alignment */
         padding-right: 20px; /* Ensured content doesn't touch the edge */
       } 
-      
+      .zusammenfassung {
+        line-height: 1.6;
+      }
      
       .sonstiges {
         padding-left: 20px; /* Added padding for better alignment */
