--- a/index.html
+++ b/index.html
@@ -102,6 +102,144 @@
           margin: 20px 0;
         }
       }
+
+      .table {
+        width: 400px;
+        text-align: left;
+        padding-left: 20px;
+      }
+
+      /* Specific class styling */
+      .zusammenfassung,
+      .ausbildung,
+      .berufserfahrung,
+      .fähigkeiten,
+      .berufserfahrung,
+      .kompetenzbewertung,
+      .sonstiges .hobbies {
+        padding-left: 20px; /* Added padding for better alignment */
+        padding-right: 20px; /* Ensured content doesn't touch the edge */
+      }
+
+      .sonstiges {
+        padding-left: 20px; /* Added padding for better alignment */
+        padding-right: 20px;
+      }
+      .hobbies {
+        color: #520707;
+      }
+      .contact {
+        padding-left: 77%;
+        line-height: 1.8;
+      }
+      .contact a {
+        color: #2422a9be;
+        width: max-content;
+        font-size: 22px;
+        position: relative;
+        cursor: pointer;
+        margin: 100px auto;
+      }
+      .contact a::after {
+        content: "";
+        position: absolute;
+        bottom: -0px;
+        height: 2px;
+        width: 100%;
+        left: 0;
+        background-color: rgb(148, 41, 41);
+        transition: 0.3s;
+        transition-timing-function: ease-in-out;
+        transform: scaleX(0);
+      }
+      .contact a:hover::after {
+        transform: scaleX(1);
+      }
+
+      .adress {
+        color: #2422a9be;
+        width: max-content;
+        position: relative;
+        cursor: pointer;
+      }
+
+      .adress::after {
+        content: "";
+        position: absolute;
+        bottom: -0px;
+        height: 2px;
+        width: 100%;
+        left: 0;
+        background-color: rgb(148, 41, 41);
+        transition: 0.3s;
+        transition-timing-function: ease-in-out;
+        transform: scaleX(0);
+        transform-origin: left center;
+      }
+
+      .adress:hover::after {
+        transform: scaleX(1);
+      }
+      .contact a,
+      p {
+        line-height: 1;
+      }
+      .zusammenfassung {
+        line-height: 1.6;
+      }
+      .date {
+        padding-left: 78%;
+        line-height: 1.6;
+        margin-top: 25px;
+      }
+      .strong {
+        padding-left: 20px;
+        font-weight: bold;
+      }
+      .bday:hover {
+        transition: font-weight 0.3s ease;
+      }
+
+      .table {
+        width: 20%;
+        border-collapse: collapse;
+      }
+
+      .table th {
+        padding: 5px;
+        text-align: left;
+        padding-left: 20px;
+      }
+
+      .table a {
+        text-decoration: none; /* Remove the default underline */
+        color: #1310bcbe; /* Default text color */
+        position: relative; /* Position relative for the after element */
+        font-size: 16px;
+        cursor: pointer;
+      }
+
+      .table a:hover {
+        color: #007bff; /* Change color on hover */
+      }
+
+      /* Hover underline effect using the ::after pseudo-element */
+      .table a::after {
+        content: "";
+        position: absolute;
+        bottom: -2px; /* Refined positioning for the underline */
+        left: 0;
+        height: 2px;
+        width: 100%;
+        background-color: rgb(143, 39, 39);
+        transition: transform 0.3s ease-in-out;
+        transform: scaleX(0);
+        transform-origin: left center; /* Start scaling from left */
+      }
+
+      .table a:hover::after {
+        transform: scaleX(1);
+      }
     </style>
   </head>
   <body>
@@ -116,56 +254,123 @@
       </p>
       <p>
         💌
-        <a href="mailto:abdi.abdirashid@hotmail.com">abdi.abdirashid@hotmail.com</a>
+        <a href="mailto:abdi.abdirashid@hotmail.com"
+          >abdi.abdirashid@hotmail.com</a
+        >
       </p>
       <p class="adress">
         📍
-        <a href="https://www.google.com/maps?q=Stallikerstrasse+5A,+8906+Bonstetten" target="_blank">
+        <a
+          href="https://www.google.com/maps?q=Stallikerstrasse+5A,+8906+Bonstetten"
+          target="_blank"
+        >
           Stallikerstrasse 5A, 8906 Bonstetten
         </a>
       </p>
     </div>
     <div class="date" id="current-date"></div>
 
-    <h2 class="summary">Summary</h2>
-    <p class="summary">
-      Experienced professional in facility maintenance, assembly, and production with strong craftsmanship skills. <br />
-      Passionate about drone flying and video editing, continuously developing my creative and technical abilities.
+    <h2 class="zusammenfassung">Zusammenfassung</h2>
+    <p class="zusammenfassung">
+      Erfahrener Fachmann in der Betriebsunterhaltung, Montage und Produktion
+      mit ausgeprägten handwerklichen Fähigkeiten. <br />
+      Leidenschaftlich im Drohnenfliegen und in der Videobearbeitung, mit
+      kontinuierlicher Entwicklung meiner kreativen und technischen Fähigkeiten.
     </p>
     <p class="strong">
-      Additional documents and more about me are attached below on the left.
+      Weiteren Dokumente und mehr von mir sind unten links angehängt.
     </p>
 
-    <h2 class="work-experience">Work Experience</h2>
+    <h2 class="berufserfahrung">Berufserfahrung</h2>
     <ul>
-      <li>12/2024 – Present: Active Job Search</li>
+      <li>12/2024 – heute: Aktive Arbeitssuche</li>
       <li>
-        09/2024 – 12/2024: Carpenter at Egli Zimmerei (Fixed-term employment)
+        09/2024 – 12/2024: Zimmermann bei Egli Zimmerei (Befristetes
+        Arbeitsverhältnis)
       </li>
       <li>
-        06/2024 – 09/2024: Temporary Assignments at Qero AG and Topas Personal
+        06/2024 – 09/2024: Temporäre Einsätze bei Qero AG und Topas Personal
       </li>
-      <li>11/2023 – 05/2024: All-rounder, Onyx Restaurant in Baar, Zug</li>
+      <li>11/2023 – 05/2024: Alrounder, Onyx Restaurant in Baar, Zug</li>
       <li>
-        01/2023 – 10/2023: Temporary Assignments at Various Companies (All Fixed-term)
+        01/2023 – 10/2023: Temporäre Einsätze bei verschiedenen Firmen (Alle
+        befristet)
+      </li>
+      <li>
+        08/2022 – 12/2022: Montagearbeiter, V-ZUG, Zug (Befristetes
+        Arbeitsverhältnis)
+      </li>
+      <li>
+        01/2022 – 07/2022: Fahrer B/E, Galliker Transport AG, Altishofen
+        (Befristetes Arbeitsverhältnis)
+      </li>
+      <li>
+        08/2021 – 12/2021: Reinigungskraft, Schule Hagendorn (Befristetes
+        Arbeitsverhältnis)
       </li>
     </ul>
 
-    <h2 class="education">Education</h2>
+    <h2 class="ausbildung">Ausbildung</h2>
     <ul>
       <li>
-        08/2019 – 07/2021: Apprenticeship as Maintenance Practitioner EBA, Municipality of Cham, Zug
+        08/2019 – 07/2021: Lehre als Unterhaltspraktiker EBA, Gemeinde Cham, Zug
       </li>
-      <li>08/2017 – 07/2019: Bridge Program, Zug</li>
-      <li>02/2013 – 08/2015: Secondary School, Nairobi, Kenya</li>
-      <li>03/2007 – 05/2010: Primary School, Somalia</li>
+      <li>08/2017 – 07/2019: Brückenangebot, Zug</li>
+      <li>02/2013 – 08/2015: Sekundarschule, Kenia, Nairobi</li>
+      <li>03/2007 – 05/2010: Primarschule, Somalia</li>
     </ul>
+
+    <h2 class="fähigkeiten">Fähigkeiten</h2>
+    <ul>
+      <li>Betriebsunterhalt</li>
+      <li>Zimmerei und Holzarbeiten</li>
+      <li>Montage und Produktion</li>
+      <li>Technische Fertigkeiten in verschiedenen handwerklichen Berufen</li>
+      <li>Fahren und Logistik (Chauffeur B/E)</li>
+      <li>Büroverwaltung und Unterstützung</li>
+      <li>Kundenservice und Gastgewerbe</li>
+      <li>Reinigung und Gebäudemanagement</li>
+      <li>Drohnenfliegen und Luftaufnahmen</li>
+      <li>Videobearbeitung und Multimedia-Produktion</li>
+      <li>Anpassungsfähigkeit an temporäre und befristete Tätigkeiten</li>
+      <li>Mehrsprachige Kommunikation (Deutsch, Englisch, Somali)</li>
+    </ul>
+
+    <h2 class="kompetenzbewertung">Kompetenzbewertung</h2>
+    <ul>
+      <li>Kundenservice: ⭐️⭐️⭐️⭐️⭐️</li>
+      <li>Microsoft Office Suite: ⭐️⭐️⭐️</li>
+      <li>Organisationsfähigkeiten:⭐️⭐️⭐️⭐️</li>
+    </ul>
+
+    <h2 class="sonstiges">Sonstiges</h2>
+
+    <table class="table">
+      <tr class="hobbies">
+        <th><a href="hobbies.html" target="_blank">Hobbies</a></th>
+        <th><a href="contact.html" target="_blank">ContactMe</a></th>
+      </tr>
+      <tr class="motivations">
+        <th>
+          <a href="Motivationsschreiben.html" target="_blank"
+            >Motivationsschreiben/Diplom</a
+          >
+        </th>
+        <th>
+          <a
+            href="Ausweis & Führerausweis_compressed-2-imageonline.co-merged-min.png"
+            target="_blank"
+            >Dokumentenausweis</a
+          >
+        </th>
+      </tr>
+    </table>
 
     <script>
       // Get current date in the format: Month Day, Year (e.g., January 25, 2025)
       const currentDate = new Date();
       const options = { year: "numeric", month: "long", day: "numeric" };
-      const dateString = currentDate.toLocaleDateString("en-US", options);
+      const dateString = currentDate.toLocaleDateString("de-DE", options); // Adjusting for German locale
 
       // Display the date inside the "current-date" div
       document.getElementById("current-date").innerText = dateString;
