--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     </style>
   </head>
   <body>
-    <h1>Abdi Abdirashid</h1>
+   <h1>Abdi Abdirashid</h1>
     <h1><img src="img.png" height="250" alt="Photo" /></h1>
 
     <div class="contact">
@@ -254,114 +254,79 @@
       </p>
       <p>
         💌
-        <a href="mailto:abdi.abdirashid@hotmail.com"
-          >abdi.abdirashid@hotmail.com</a
-        >
+        <a href="mailto:abdi.abdirashid@hotmail.com">abdi.abdirashid@hotmail.com</a>
       </p>
       <p class="adress">
         📍
-        <a
-          href="https://www.google.com/maps?q=Stallikerstrasse+5A,+8906+Bonstetten"
-          target="_blank"
-        >
+        <a href="https://www.google.com/maps?q=Stallikerstrasse+5A,+8906+Bonstetten" target="_blank">
           Stallikerstrasse 5A, 8906 Bonstetten
         </a>
       </p>
     </div>
     <div class="date" id="current-date"></div>
 
-    <h2 class="zusammenfassung">Zusammenfassung</h2>
-    <p class="zusammenfassung">
-      Erfahrener Fachmann in der Betriebsunterhaltung, Montage und Produktion
-      mit ausgeprägten handwerklichen Fähigkeiten. <br />
-      Leidenschaftlich im Drohnenfliegen und in der Videobearbeitung, mit
-      kontinuierlicher Entwicklung meiner kreativen und technischen Fähigkeiten.
+    <h2 class="summary">Summary</h2>
+    <p class="summary">
+      Experienced professional in operational maintenance, assembly, and production with strong craftsmanship skills. <br />
+      Passionate about drone flying and video editing, continuously developing my creative and technical abilities.
     </p>
-    <p class="strong">
-      Weiteren Dokumente und mehr von mir sind unten links angehängt.
-    </p>
+    <p class="strong">Additional documents and more about me are attached below on the left.</p>
 
-    <h2 class="berufserfahrung">Berufserfahrung</h2>
+    <h2 class="work_experience">Work Experience</h2>
     <ul>
-      <li>12/2024 – heute: Aktive Arbeitssuche</li>
-      <li>
-        09/2024 – 12/2024: Zimmermann bei Egli Zimmerei (Befristetes
-        Arbeitsverhältnis)
-      </li>
-      <li>
-        06/2024 – 09/2024: Temporäre Einsätze bei Qero AG und Topas Personal
-      </li>
-      <li>11/2023 – 05/2024: Alrounder, Onyx Restaurant in Baar, Zug</li>
-      <li>
-        01/2023 – 10/2023: Temporäre Einsätze bei verschiedenen Firmen (Alle
-        befristet)
-      </li>
-      <li>
-        08/2022 – 12/2022: Montagearbeiter, V-ZUG, Zug (Befristetes
-        Arbeitsverhältnis)
-      </li>
-      <li>
-        01/2022 – 07/2022: Fahrer B/E, Galliker Transport AG, Altishofen
-        (Befristetes Arbeitsverhältnis)
-      </li>
-      <li>
-        08/2021 – 12/2021: Reinigungskraft, Schule Hagendorn (Befristetes
-        Arbeitsverhältnis)
-      </li>
+      <li>12/2024 – Present: Actively job searching</li>
+      <li>09/2024 – 12/2024: Carpenter at Egli Zimmerei (Fixed-term employment)</li>
+      <li>06/2024 – 09/2024: Temporary assignments at Qero AG and Topas Personal</li>
+      <li>11/2023 – 05/2024: All-rounder, Onyx Restaurant in Baar, Zug</li>
+      <li>01/2023 – 10/2023: Temporary assignments at various companies (All fixed-term)</li>
+      <li>08/2022 – 12/2022: Assembly worker, V-ZUG, Zug (Fixed-term employment)</li>
+      <li>01/2022 – 07/2022: Driver B/E, Galliker Transport AG, Altishofen (Fixed-term employment)</li>
+      <li>08/2021 – 12/2021: Cleaning staff, Schule Hagendorn (Fixed-term employment)</li>
     </ul>
 
-    <h2 class="ausbildung">Ausbildung</h2>
+    <h2 class="education">Education</h2>
     <ul>
-      <li>
-        08/2019 – 07/2021: Lehre als Unterhaltspraktiker EBA, Gemeinde Cham, Zug
-      </li>
-      <li>08/2017 – 07/2019: Brückenangebot, Zug</li>
-      <li>02/2013 – 08/2015: Sekundarschule, Kenia, Nairobi</li>
-      <li>03/2007 – 05/2010: Primarschule, Somalia</li>
+      <li>08/2019 – 07/2021: Apprenticeship as Maintenance Practitioner EBA, Municipality of Cham, Zug</li>
+      <li>08/2017 – 07/2019: Bridge Program, Zug</li>
+      <li>02/2013 – 08/2015: Secondary School, Kenya, Nairobi</li>
+      <li>03/2007 – 05/2010: Primary School, Somalia</li>
     </ul>
 
-    <h2 class="fähigkeiten">Fähigkeiten</h2>
+    <h2 class="skills">Skills</h2>
     <ul>
-      <li>Betriebsunterhalt</li>
-      <li>Zimmerei und Holzarbeiten</li>
-      <li>Montage und Produktion</li>
-      <li>Technische Fertigkeiten in verschiedenen handwerklichen Berufen</li>
-      <li>Fahren und Logistik (Chauffeur B/E)</li>
-      <li>Büroverwaltung und Unterstützung</li>
-      <li>Kundenservice und Gastgewerbe</li>
-      <li>Reinigung und Gebäudemanagement</li>
-      <li>Drohnenfliegen und Luftaufnahmen</li>
-      <li>Videobearbeitung und Multimedia-Produktion</li>
-      <li>Anpassungsfähigkeit an temporäre und befristete Tätigkeiten</li>
-      <li>Mehrsprachige Kommunikation (Deutsch, Englisch, Somali)</li>
+      <li>Operational maintenance</li>
+      <li>Carpentry and woodworking</li>
+      <li>Assembly and production</li>
+      <li>Technical skills in various trades</li>
+      <li>Driving and logistics (Chauffeur B/E)</li>
+      <li>Office administration and support</li>
+      <li>Customer service and hospitality</li>
+      <li>Cleaning and facility management</li>
+      <li>Drone flying and aerial photography</li>
+      <li>Video editing and multimedia production</li>
+      <li>Adaptability to temporary and fixed-term roles</li>
+      <li>Multilingual communication (German, English, Somali)</li>
     </ul>
 
-    <h2 class="kompetenzbewertung">Kompetenzbewertung</h2>
+    <h2 class="competency_rating">Competency Rating</h2>
     <ul>
-      <li>Kundenservice: ⭐️⭐️⭐️⭐️⭐️</li>
+      <li>Customer Service: ⭐️⭐️⭐️⭐️⭐️</li>
       <li>Microsoft Office Suite: ⭐️⭐️⭐️</li>
-      <li>Organisationsfähigkeiten:⭐️⭐️⭐️⭐️</li>
+      <li>Organizational Skills: ⭐️⭐️⭐️⭐️</li>
     </ul>
 
-    <h2 class="sonstiges">Sonstiges</h2>
-
+    <h2 class="others">Other</h2>
     <table class="table">
       <tr class="hobbies">
         <th><a href="hobbies.html" target="_blank">Hobbies</a></th>
-        <th><a href="contact.html" target="_blank">ContactMe</a></th>
+        <th><a href="contact.html" target="_blank">Contact Me</a></th>
       </tr>
       <tr class="motivations">
         <th>
-          <a href="Motivationsschreiben.html" target="_blank"
-            >Motivationsschreiben/Diplom</a
-          >
+          <a href="Motivationsschreiben.html" target="_blank">Motivation Letter/Diploma</a>
         </th>
         <th>
-          <a
-            href="Ausweis & Führerausweis_compressed-2-imageonline.co-merged-min.png"
-            target="_blank"
-            >Dokumentenausweis</a
-          >
+          <a href="Ausweis & Führerausweis_compressed-2-imageonline.co-merged-min.png" target="_blank">Identity Documents</a>
         </th>
       </tr>
     </table>
@@ -370,8 +335,8 @@
       // Get current date in the format: Month Day, Year (e.g., January 25, 2025)
       const currentDate = new Date();
       const options = { year: "numeric", month: "long", day: "numeric" };
-      const dateString = currentDate.toLocaleDateString("de-DE", options); // Adjusting for German locale
-
+      const dateString = currentDate.toLocaleDateString("en-US", options); // Adjusted for English locale
+      
       // Display the date inside the "current-date" div
       document.getElementById("current-date").innerText = dateString;
     </script>
