--- a/contact.html
+++ b/contact.html
@@ -169,7 +169,7 @@
         <img src="img.png" alt="Abdi Abdirashid" />
         <div class="details">
           <h1>Abdi Abdirashid</h1>
-          <p>Engagierter Arbeiter auf der Suche nach Möglichkeiten.</p>
+          <p>Dedicated worker seeking opportunities.</p>
         </div>
       </div>
       <hr />
