--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
       .table {
         width: 300px;
         text-align: left;
-        padding-left: 20px;
+        
+        padding-left: 3%;
+        line-height: 1.8;
       }
 
       /* Specific class styling */
