--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
       .table {
         width: 31%;
         border-collapse: collapse;
+         margin-top: 15px;
       }
 
       .table th {
