--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       .table {
         width: 31%;
         border-collapse: collapse;
-         margin-top: 15px;
+        margin-top: 15px;
       }
 
       .table th {
@@ -280,7 +280,8 @@
       my creative and technical abilities.
     </p>
     <p class="strong">
-      Additional documents and more about me are attached below on the left.
+     Additional documents and more information about me are attached below,
+      with clickable links at the very bottom.
     </p>
 
     <h2 class="berufserfahrung">Work Experience</h2>
