--- a/index.html
+++ b/index.html
@@ -212,17 +212,18 @@
       }
 
       .table th {
-        padding: 4px;
+        padding: 2px;
         text-align: left;
-        padding-left: 20px;
+        padding-left: 70px;
       }
 
       .table a {
         text-decoration: none; /* Remove the default underline */
         color: #1310bcbe; /* Default text color */
         position: relative; /* Position relative for the after element */
-        font-size: 17px;
+        font-size: 19px;
         cursor: pointer;
+         line-height: 1.3;
       }
 
       .table a:hover {
