--- a/hobbies.html
+++ b/hobbies.html
@@ -30,6 +30,7 @@
     }
     .content {
       position: relative;
+      
       z-index: 1;
       padding: 30px;
       padding-bottom: 20px;
@@ -51,7 +52,7 @@
 <body>
   <div class="video-container">
     <video autoplay muted loop>
-      <source src="theee dolder.MOV" type="video/mp4">
+      <source src="/vid/theee dolder (1).mov" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
