--- a/hobbies.html
+++ b/hobbies.html
@@ -43,9 +43,11 @@
     }
     h1 {
       text-align: center;
+      padding-bottom: 10px;
     }
     p, ul {
       padding-left: 15px;
+      line-height: 1.4;
     }
   </style>
 </head>
