--- a/hobbies.html
+++ b/hobbies.html
@@ -82,12 +82,15 @@
         max-width: 90%;
         font-size: 14px;
         padding: 20px;
+        margin: 20px auto;
       }
-      h1 {
-        font-size: 24px;
-      }
-      p, ul {
+    }
+    @media (max-width: 430px) {
+      .content {
+        max-width: 95%;
         font-size: 14px;
+        padding: 15px;
+        margin: 20px auto;
       }
     }
   </style>
