--- a/hobbies.html
+++ b/hobbies.html
@@ -10,9 +10,13 @@
       padding: 0;
       box-sizing: border-box;
     }
-    body {
+   body {
       font-family: 'Poppins', sans-serif;
-      color: #2c3e50;
+      color: #bfcede;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      
     }
     .video-container {
       position: fixed;
