--- a/hobbies.html
+++ b/hobbies.html
@@ -12,7 +12,7 @@
     }
    body {
       font-family: 'Poppins', sans-serif;
-      color: #bfcede;
+      color: #25578d;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
@@ -42,11 +42,11 @@
       position: relative;
       z-index: 1;
       padding: 25px;
-      background: rgba(243, 161, 161, 0.85);
+      background: rgba(233, 215, 215, 0.85);
       max-width:900px;
-      margin-left: 300px;
+    
       border-radius: 12px;
-      box-shadow: 0 6px 15px rgba(255, 255, 255, 0.2);
+     box-shadow: 0 6px 15px rgba(8, 7, 7, 0.2);
       font-size: 16px;
       text-align: center;
       margin-top: 15px;
@@ -73,7 +73,7 @@
     }
     ul li::before {
       content: '\2022';
-      color: #3498db;
+       color: #352424;
       font-weight: bold;
       display: inline-block; 
       width: 1em;
