--- a/hobbies.html
+++ b/hobbies.html
@@ -28,22 +28,23 @@
       z-index: -1;
     }
     .video-container video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      min-width: 100%;
-      min-height: 100%;
+     position: relative;
+      z-index: 1;
+      padding: 25px;
+      background: rgba(255, 255, 255, 0.6); /* Adjusted for transparency */
+      max-width: 1200px;
+      border-radius: 12px;
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+      font-size: 16px;
+      text-align: center;
+      backdrop-filter: blur(1px); /* Blurred background effect */
     }
     .content {
       position: relative;
       z-index: 1;
       padding: 25px;
       background: rgba(233, 215, 215, 0.85);
-      max-width:900px;
+      max-width:1200px;
     
       border-radius: 12px;
      box-shadow: 0 6px 15px rgba(8, 7, 7, 0.2);
