--- a/hobbies.html
+++ b/hobbies.html
@@ -12,7 +12,7 @@
     }
    body {
       font-family: 'Poppins', sans-serif;
-      color: #25578d;
+        color: #13355aec;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
@@ -34,7 +34,7 @@
       background: rgba(255, 255, 255, 0.6); /* Adjusted for transparency */
       max-width: 1200px;
       border-radius: 12px;
-      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+       box-shadow: 0 6px 15px rgba(1, 30, 247, 0.2);
       font-size: 16px;
       text-align: center;
       backdrop-filter: blur(1px); /* Blurred background effect */
@@ -57,6 +57,7 @@
       font-size: 28px;
       margin-bottom: 5px;
       font-weight: 600;
+      color: #314a62;
     }
     p, ul {
       font-size: 16px;
@@ -74,7 +75,7 @@
     }
     ul li::before {
       content: '\2022';
-       color: #352424;
+       color: #2e7e2e;
       font-weight: bold;
       display: inline-block; 
       width: 1em;
