--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         </th>
         <th>
           <a
-            href="Ausweis & Führerausweis_compressed-2-imageonline.co-merged-min.png"
+            href="Privacy Notice.html"
             target="_blank"
             >Documents/ID</a
           >
