--- a/hobbies.html
+++ b/hobbies.html
@@ -10,13 +10,12 @@
       padding: 0;
       box-sizing: border-box;
     }
-   body {
+    body {
       font-family: 'Poppins', sans-serif;
-        color: #13355aec;
+      color: #13355aec;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      
     }
     .video-container {
       position: fixed;
@@ -28,36 +27,34 @@
       z-index: -1;
     }
     .video-container video {
-     position: relative;
-      z-index: 1;
-      padding: 25px;
-      background: rgba(255, 255, 255, 0.6); /* Adjusted for transparency */
-      max-width: 1200px;
-      border-radius: 12px;
-       box-shadow: 0 6px 15px rgba(1, 30, 247, 0.2);
-      font-size: 16px;
-      text-align: center;
-      backdrop-filter: blur(1px); /* Blurred background effect */
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      min-width: 100%;
+      min-height: 100%;
     }
     .content {
       position: relative;
       z-index: 1;
       padding: 25px;
-      background: rgba(233, 215, 215, 0.85);
-      max-width:1200px;
-    
+      background: rgba(255, 255, 255, 0.6); /* Adjusted for transparency */
+      max-width: 1200px;
       border-radius: 12px;
-     box-shadow: 0 6px 15px rgba(8, 7, 7, 0.2);
+     box-shadow: 0 6px 15px rgba(1, 30, 247, 0.2);
       font-size: 16px;
       text-align: center;
-      margin-top: 15px;
+      backdrop-filter: blur(0px); /* Blurred background effect */
     }
     h1 {
       text-align: center;
       font-size: 28px;
       margin-bottom: 5px;
       font-weight: 600;
-      color: #314a62;
+       color: #314a62;
     }
     p, ul {
       font-size: 16px;
@@ -112,17 +109,17 @@
 
   <div class="content">
     <h1>Hobbies</h1>
-    <p>
-      In my free time, I enjoy programming and taking on new challenges in software development, which allows me to continuously improve my technical skills.
-    </p>
-    <ul>
-      <li>
-        On weekends, I often go drone flying with my roommate. This combines my passion for technology with the thrill of outdoor adventures.
-      </li>
-      <li>
-        I am also passionate about fitness and make sure to integrate training and movement into my daily routine to promote both my physical and mental health.
-      </li>
-    </ul>
+ <p>
+  In my free time, I enjoy programming and taking on new challenges in software development, which allows me to continuously improve my technical skills.
+</p>
+<ul>
+  <li>
+    On weekends, I often go drone flying with my roommate. This combines my passion for technology with the thrill of outdoor adventures.
+  </li>
+  <li>
+    I am also passionate about fitness and make sure to integrate training and movement into my daily routine to promote both my physical and mental health.
+  </li>
+</ul>
   </div>
    <script>
     document.addEventListener("DOMContentLoaded", function() {
