--- a/contact.html
+++ b/contact.html
@@ -224,7 +224,7 @@
           <img src="img.png" alt="Abdi Abdirashid" />
           <div class="details">
             <h1>Abdi Abdirashid</h1>
-            <p>Engagierter Arbeiter, der nach Möglichkeiten sucht</p>
+            <p>Dedicated Worker Seeking Opportunities</p>
           </div>
         </div>
         <hr />
