--- a/hobbies.html
+++ b/hobbies.html
@@ -76,7 +76,7 @@
       font-weight: bold;
       display: inline-block; 
       width: 1em;
-      margin-left: -1em;
+      margin-left: em;
       position: absolute;
       left: 0;
     }
@@ -102,7 +102,7 @@
 <body>
   <div class="video-container">
     <video autoplay muted loop playsinline webkit-playsinline>
-      <source src="theeee dolder (1) (1).mov" type="video/mp4">
+    <source src="video (1).mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
