--- a/Motivationsschreiben.html
+++ b/Motivationsschreiben.html
@@ -123,7 +123,7 @@
 
       <p>Kind regards,<br><br><img class="signature" src="Picture1.png" alt="signature"><br><br>Abdi Abdirashid</p>
       <th><a href="Berufsattest Unterhaltspraktiker EBA-1.png" target="_blank">Diplom</a></th>
-       <th><a href="Berufsattest Unterhaltspraktiker EBA-1.png" target="_blank">A1A3 Drone Certificate</a></th>
+       <th><a href="UAS-A1-A3-certificate-pdf.pdf" target="_blank">A1A3 Drone Certificate</a></th>
     </div>
 
     <table class="table">
