--- a/Motivationsschreiben.html
+++ b/Motivationsschreiben.html
@@ -122,7 +122,7 @@
       <p>I look forward to the opportunity to share more about myself and my qualifications in a personal interview. I would also be happy to demonstrate my abilities during a trial day. Thank you for considering my application.</p>
 
       <p>Kind regards,<br><br><img class="signature" src="Picture1.png" alt="signature"><br><br>Abdi Abdirashid</p>
-      <th><a href="Berufsattest Unterhaltspraktiker EBA-1.png" target="_blank">Diplom</a></th>
+      <th><a href="Berufsattest Unterhaltspraktiker EBA-1.png" target="_blank">Diplom</a></th> <br><br>
        <th><a href="UAS-A1-A3-certificate-pdf.pdf" target="_blank">A1A3 Drone Certificate</a></th>
     </div>
 
