--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
       <tr class="motivations">
         <th>
           <a href="Motivationsschreiben.html" target="_blank"
-            >Motivational letter/Diplom/A1-A3-cert 🚁</a
+            >Cover letter/Diplom/A1-A3-cert 🚁</a
           >
         </th>
         <th>
