--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,8 @@
       /* Container for the business card */
       .container {
         background-color: #3865f909;
-        padding: 40px;
+        padding: 26px;
+       
         border-radius: 12px;
         box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
         width: 80%;
@@ -43,7 +44,7 @@
       .business-card {
         background-color: #dadada;
         border: 1px solid #5f37a50f;
-        padding: 5px;
+        padding: 8%;
         border-radius: 12px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         
